Fix spacing in code

--- a/css/main.css
+++ b/css/main.css
@@ -5,19 +5,19 @@ html {
 
 h1 {
   color: #990073;
-  transform: rotate(-8deg) translate(20px, 120px) scale(1.2);
+  transform: rotate(-8deg) translateY(120px) scale(1.2);
   transform-origin: left center;
 }
 
 p {
   color: #c09;
   max-width: 19em;
-  transform: rotate(-5deg) translate(40px, 90px);
+  transform: rotate(-5deg) translate(10px, 90px);
   transform-origin: left center;
 }
 
 a {
-  transform: translate(45px, 70px);
+  transform: translate(20px, 100px);
 }
 
 .btn {
